# esp-amoled-1.8

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  wifi-signal.ai
components/esp_lcd_sh8601/: README.md
components/espressif2022__lottie_player/: .component_hash  idf_component.yml
components/espressif2022__lottie_player/src/: lv_lottie.c
main/: CMakeLists.txt  Kconfig.projbuild  common.h  common.hpp  idf_component.yml  main.cpp  mmap_generate_resources.h  mmap_generate_spiffs.h  style.h
main/app/: app.cpp  app.h  app.header.cpp  app.lvgl.cpp  app.setting.cpp  app.status.cpp  app.statusbar.cpp  app.wifilist.cpp
main/resources/lottie/: data.json
main/setting/: wifi.json
main/utils/: devicemanager.cpp  devicemanager.func.cpp  devicemanager.h  dispmanager.cpp  dispmanager.func.cpp  dispmanager.h  fsmanager.cpp  fsmanager.h  port_axp2101.cpp  powermanager.cpp  powermanager.h  utils.cpp  utils.h  wifimanager.cpp  wifimanager.h
